# Shorturl-Generator

./: Cargo.toml  README.md  compose.yaml  data.json  keys
reverse-proxy/: nginx.conf
rust-app/: Cargo.toml  main.rs
src/: main.rs
web-server/: index.html
web-server/assets/: index-BmLm9XGL.css  index-Df3sJBxX.js
