[package]
name = "myapp"
version = "0.1.0"
edition = "2024"

[dependencies]
is-url = "1.0.4"
axum = {version = "0.5.15", features = ["macros"]}
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0"
tokio = {version = "1.21.0", features = ["full"]}
rand = "0.6"
# "cors" と "fs" 機能を有効にする
tower-http = { version = "0.3", features = ["cors", "fs"] }
redis = "0.29.2"

[[bin]]
name = "myapp"
path = "main.rs"